users/get 삭제 및 swagger users/get삭제
